--- a/gui/preferenceswindow.glade
+++ b/gui/preferenceswindow.glade
@@ -347,7 +347,7 @@ The mouse button has an input pressure of 0.5 when pressed.</property>
                     <property name="can_focus">False</property>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
+                    <property name="expand">True</property>
                     <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
@@ -359,7 +359,8 @@ The mouse button has an input pressure of 0.5 when pressed.</property>
                     <property name="xalign">0</property>
                     <property name="yalign">0</property>
                     <property name="label" translatable="yes" context="Prefs Dialog|Button|Pointer Button Mappings|">• The space bar can be used like Button2.
-• Note: some tablet pads' buttons cannot be held down when pressed.</property>
+• Some tablet pads' buttons cannot be held down when pressed.
+• Keyboard shortcuts can be changed in the main menu. Hover over a menu item and press the key you want.</property>
                     <property name="wrap">True</property>
                     <property name="wrap_mode">word-char</property>
                   </object>
