Support fake, hopefully faster, checkerboard bgs
Optimizing the part of the rendering path involving rendering RGBA data
with A<1 is proving intractable. "RGBU" (i.e. RGBA with A=1) is noticeably
faster. Therefore use the tile rendering phase to fake a checkerboard
background.

New setting: "Prefs → View → Zoom → Use a real checkerboard pattern".
The faked kind is a little ugly, and is prone to dithering artefacts. Also
its appearance changes with the mipmap level, which looks odd. Therefore
it's off by default.

Addresses #21 by trading a little raw performance for hopefully much less
lag when a fake transparency checkerboard background is turned on. CPU use
for 1:1 zoom + a single destination-in layer on my system drops from 160%
to 120%.

--- a/gui/preferenceswindow.glade
+++ b/gui/preferenceswindow.glade
@@ -542,7 +542,7 @@ The mouse button has an input pressure of 0.5 when pressed.</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="xalign">0</property>
-            <property name="label" translatable="yes" context="Prefs Dialog|View|">&lt;b&gt;Zoom&lt;/b&gt;</property>
+            <property name="label" translatable="yes" context="Prefs Dialog|View|">&lt;b&gt;Zoom and Rendering&lt;/b&gt;</property>
             <property name="use_markup">True</property>
           </object>
           <packing>
@@ -616,7 +616,7 @@ This may result in slow scrolling on some platforms.</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
-            <property name="top_attach">3</property>
+            <property name="top_attach">4</property>
             <property name="width">3</property>
           </packing>
         </child>
@@ -631,7 +631,7 @@ This may result in slow scrolling on some platforms.</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
-            <property name="top_attach">4</property>
+            <property name="top_attach">5</property>
           </packing>
         </child>
         <child>
@@ -644,7 +644,7 @@ This may result in slow scrolling on some platforms.</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
-            <property name="top_attach">5</property>
+            <property name="top_attach">6</property>
           </packing>
         </child>
         <child>
@@ -665,7 +665,7 @@ This may result in slow scrolling on some platforms.</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
-            <property name="top_attach">5</property>
+            <property name="top_attach">6</property>
             <property name="width">2</property>
           </packing>
         </child>
@@ -679,7 +679,7 @@ This may result in slow scrolling on some platforms.</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
-            <property name="top_attach">6</property>
+            <property name="top_attach">7</property>
           </packing>
         </child>
         <child>
@@ -694,7 +694,7 @@ This may result in slow scrolling on some platforms.</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
-            <property name="top_attach">6</property>
+            <property name="top_attach">7</property>
             <property name="width">2</property>
           </packing>
         </child>
@@ -716,7 +716,7 @@ This may result in slow scrolling on some platforms.</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
-            <property name="top_attach">7</property>
+            <property name="top_attach">8</property>
             <property name="width">3</property>
           </packing>
         </child>
@@ -776,8 +776,39 @@ This may result in slow scrolling on some platforms.</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
-            <property name="top_attach">4</property>
+            <property name="top_attach">5</property>
             <property name="width">2</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkCheckButton" id="real_alpha_checks_checkbutton">
+            <property name="label" translatable="yes" context="Prefs Dialog|View|Zoom|">Use a real checkerboard pattern</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="tooltip_markup" translatable="yes" context="Prefs Dialog|View|Zoom|">Draw a real checkerboard pattern to show transparency.
+This slows down the display, but can be less confusing.</property>
+            <property name="hexpand">True</property>
+            <property name="xalign">0</property>
+            <property name="draw_indicator">True</property>
+            <signal name="toggled" handler="real_alpha_checks_checkbutton_toggled_cb" swapped="no"/>
+          </object>
+          <packing>
+            <property name="left_attach">1</property>
+            <property name="top_attach">3</property>
+            <property name="width">2</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="label30">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="xalign">0</property>
+            <property name="label" translatable="yes">When showing transparency:</property>
+          </object>
+          <packing>
+            <property name="left_attach">0</property>
+            <property name="top_attach">3</property>
           </packing>
         </child>
       </object>
