--- a/gui/brusheditor.glade
+++ b/gui/brusheditor.glade
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.2 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gtk+" version="3.4"/>
   <requires lib="mypaint_widgets" version="3.0"/>
   <object class="GtkImage" id="clone_button_image">
     <property name="visible">True</property>
@@ -284,12 +284,17 @@
         <property name="can_focus">True</property>
         <property name="hexpand">True</property>
         <property name="vexpand">True</property>
+        <property name="shadow_type">in</property>
         <property name="min_content_width">450</property>
         <property name="min_content_height">450</property>
         <child>
           <object class="GtkViewport" id="setting_editor_viewport">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="margin_left">12</property>
+            <property name="margin_right">12</property>
+            <property name="margin_top">12</property>
+            <property name="margin_bottom">12</property>
             <property name="vscroll_policy">natural</property>
             <property name="shadow_type">none</property>
             <child>
@@ -445,15 +450,13 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="hexpand">True</property>
-                        <property name="row_spacing">6</property>
-                        <property name="column_spacing">6</property>
                         <child>
                           <object class="GtkLabel" id="by{name}_ymin_label">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">Minimum value for the output axis.
 This can be set using the main slider for {dname}.</property>
-                            <property name="halign">start</property>
+                            <property name="halign">center</property>
                             <property name="valign">end</property>
                             <property name="label" translatable="yes">&lt;ymin&gt;</property>
                             <property name="single_line_mode">True</property>
@@ -470,7 +473,7 @@ This can be set using the main slider for {dname}.</property>
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">Maximum value for the output axis.
 This can be set using the main slider for {dname}.</property>
-                            <property name="halign">start</property>
+                            <property name="halign">center</property>
                             <property name="valign">start</property>
                             <property name="label" translatable="yes">&lt;ymax&gt;</property>
                             <property name="single_line_mode">True</property>
@@ -485,7 +488,7 @@ This can be set using the main slider for {dname}.</property>
                           <object class="GtkLabel" id="by{name}_output_axis_label">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="halign">start</property>
+                            <property name="halign">center</property>
                             <property name="vexpand">True</property>
                             <property name="label" translatable="yes">Output</property>
                             <property name="single_line_mode">True</property>
@@ -503,7 +506,9 @@ This can be set using the main slider for {dname}.</property>
                           <object class="GtkLabel" id="by{name}_input_axis_label">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="valign">start</property>
+                            <property name="valign">center</property>
+                            <property name="margin_left">6</property>
+                            <property name="margin_right">6</property>
                             <property name="hexpand">True</property>
                             <property name="label" translatable="yes">Input</property>
                             <property name="justify">center</property>
@@ -524,27 +529,16 @@ This can be set using the main slider for {dname}.</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="tooltip_text" translatable="yes">Adjusts the maximum value</property>
-                            <property name="halign">end</property>
+                            <property name="halign">center</property>
+                            <property name="valign">center</property>
                             <property name="relief">none</property>
                             <property name="focus_on_click">False</property>
                             <property name="orientation">vertical</property>
                             <property name="size">menu</property>
-                            <property name="icons">gtk-edit</property>
-                            <child internal-child="plus_button">
-                              <object class="GtkButton" id="scalebutton-plus_button1">
-                                <property name="can_focus">False</property>
-                                <property name="receives_default">False</property>
-                              </object>
-                            </child>
-                            <child internal-child="minus_button">
-                              <object class="GtkButton" id="scalebutton-minus_button1">
-                                <property name="can_focus">False</property>
-                                <property name="receives_default">False</property>
-                              </object>
-                            </child>
+                            <property name="icons">mypaint-edit-symbolic</property>
                           </object>
                           <packing>
-                            <property name="left_attach">3</property>
+                            <property name="left_attach">4</property>
                             <property name="top_attach">3</property>
                           </packing>
                         </child>
@@ -556,27 +550,16 @@ This can be set using the main slider for {dname}.</property>
                             <property name="receives_default">True</property>
                             <property name="tooltip_text" translatable="yes">Adjusts the minimum value</property>
                             <property name="halign">start</property>
+                            <property name="valign">center</property>
                             <property name="relief">none</property>
                             <property name="use_stock">True</property>
                             <property name="focus_on_click">False</property>
                             <property name="orientation">vertical</property>
                             <property name="size">menu</property>
-                            <property name="icons">gtk-edit</property>
-                            <child internal-child="plus_button">
-                              <object class="GtkButton" id="scalebutton-plus_button2">
-                                <property name="can_focus">False</property>
-                                <property name="receives_default">False</property>
-                              </object>
-                            </child>
-                            <child internal-child="minus_button">
-                              <object class="GtkButton" id="scalebutton-minus_button2">
-                                <property name="can_focus">False</property>
-                                <property name="receives_default">False</property>
-                              </object>
-                            </child>
+                            <property name="icons">mypaint-edit-symbolic</property>
                           </object>
                           <packing>
-                            <property name="left_attach">1</property>
+                            <property name="left_attach">0</property>
                             <property name="top_attach">3</property>
                           </packing>
                         </child>
@@ -587,12 +570,12 @@ This can be set using the main slider for {dname}.</property>
                             <property name="tooltip_text" translatable="yes">Minimum value for the input axis.
 Use the popup scale to adjust this.</property>
                             <property name="halign">start</property>
-                            <property name="valign">start</property>
+                            <property name="valign">center</property>
                             <property name="label" translatable="yes">&lt;xmin&gt;</property>
                             <property name="single_line_mode">True</property>
                           </object>
                           <packing>
-                            <property name="left_attach">0</property>
+                            <property name="left_attach">1</property>
                             <property name="top_attach">3</property>
                           </packing>
                         </child>
@@ -603,12 +586,12 @@ Use the popup scale to adjust this.</property>
                             <property name="tooltip_text" translatable="yes">Maximum value for the input axis.
 Use the popup scale to adjust this.</property>
                             <property name="halign">start</property>
-                            <property name="valign">start</property>
+                            <property name="valign">center</property>
                             <property name="label" translatable="yes">&lt;xmax&gt;</property>
                             <property name="single_line_mode">True</property>
                           </object>
                           <packing>
-                            <property name="left_attach">4</property>
+                            <property name="left_attach">3</property>
                             <property name="top_attach">3</property>
                           </packing>
                         </child>
@@ -629,7 +612,18 @@ Use the popup scale to adjust this.</property>
                           </packing>
                         </child>
                         <child>
-                          <placeholder/>
+                          <object class="GtkArrow" id="by{name}_pad_arrow1">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="halign">center</property>
+                            <property name="valign">center</property>
+                            <property name="arrow_type">none</property>
+                            <property name="shadow_type">none</property>
+                          </object>
+                          <packing>
+                            <property name="left_attach">5</property>
+                            <property name="top_attach">3</property>
+                          </packing>
                         </child>
                       </object>
                       <packing>
@@ -663,7 +657,6 @@ Use the popup scale to adjust this.</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_markup" translatable="yes">Basic details for this setting</property>
-                        <property name="margin_top">12</property>
                         <property name="margin_bottom">6</property>
                         <property name="hexpand">True</property>
                         <property name="xalign">0</property>
@@ -754,10 +747,17 @@ Use the popup scale to adjust this.</property>
                       </packing>
                     </child>
                     <child>
-                      <placeholder/>
-                    </child>
-                    <child>
-                      <placeholder/>
+                      <object class="GtkArrow" id="by{name}_pad_arrow2">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="arrow_type">none</property>
+                        <property name="shadow_type">none</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">0</property>
+                        <property name="top_attach">5</property>
+                        <property name="width">2</property>
+                      </packing>
                     </child>
                   </object>
                   <packing>
